[package]
name = "loec"
version = "0.5.0"
description = "Count and estimate the cost of lines of code (cloc) fast."
authors = ["Curtis Gagliardi <curtis@curtis.io>", "Owen Griffiths <root@ogriffiths.com>"]

repository = "https://github.com/cgag/loc"
homepage = "https://github.com/cgag/loc"
documentation = "https://github.com/cgag/loc"

license="MIT"

[dependencies]
clap          = "2.32.0"
deque         = "0.3.2"
memchr        = "2.0.1"
regex         = "1.0.2"
num_cpus      = "1.8.0"
ignore        = "0.4.2"
edit-distance = "2.0.1"
smallvec      = "0.6.5"
rusty-money   = "0.4.1"

[profile.release]
incremental = false
lto = true
